--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,43 @@ button:hover{
 .artist img{
     width:100%;
 }
+/** Change CSS based on media query**/
+@media (max-width: 500px){
+    a {	
+        font-size: 2.0rem;	
+    }
+    div h1{
+        font-size: 4.5rem;
+        margin-bottom: 1%;
+    }
+    nav a{
+        margin: 0 5%;
+    }
+   .title-container div {	
+        line-height: 1;
+        height:40vh;
+        background-size: 275% 250%;
+        background-position: center;
+    }	 
+    img {	
+        height:20rem;	
+        object-fit: contain;	
+        display: block;
+        border-radius: 5%;
+    } 
+    .artists-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .artist img{
+        width:auto;  
+    }
+    .artist{
+        width: 80%;
+    }
+    .bio{
+        font-size: 1rem;
+    }
+}
